feat: keras LSTM model

--- a/src/ml_model/LSTM_motion.ipynb
+++ b/src/ml_model/LSTM_motion.ipynb
@@ -3,328 +3,80 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e17b6b6",
+   "id": "776ce6c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import numpy as np\n",
-    "import matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
-    "import tensorflow as tf  # Version 1.0.0 (some previous versions are used in past commits)\n",
-    "from sklearn import metrics\n",
+    "np.random.seed(42)\n",
+    "import tensorflow as tf\n",
+    "tf.random.set_seed(42)\n",
     "\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "1d39b9b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Useful Constants\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import LSTM\n",
+    "from keras.layers.core import Dense, Dropout\n",
     "\n",
-    "# Those are separate normalised input features for the neural network\n",
-    "INPUT_SIGNAL_TYPES = [\n",
-    "    \"body_acc_x_\",\n",
-    "    \"body_acc_y_\",\n",
-    "    \"body_acc_z_\",\n",
-    "    \"body_gyro_x_\",\n",
-    "    \"body_gyro_y_\",\n",
-    "    \"body_gyro_z_\",\n",
-    "    \"total_acc_x_\",\n",
-    "    \"total_acc_y_\",\n",
-    "    \"total_acc_z_\"\n",
-    "]\n",
-    "\n",
-    "# Output classes to learn how to classify\n",
-    "LABELS = [\n",
-    "    \"WALKING\", \n",
-    "    \"WALKING_UPSTAIRS\", \n",
-    "    \"WALKING_DOWNSTAIRS\", \n",
-    "    \"SITTING\", \n",
-    "    \"STANDING\", \n",
-    "    \"LAYING\"\n",
-    "] "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c88f32ce",
-   "metadata": {},
-   "source": [
-    "## Download Data"
+    "from data import load_data\n",
+    "from utils import confusion_matrix\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77d75c9d",
+   "id": "43dd4f55",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_PATH = \"data/\"\n",
-    "\n",
-    "!pwd && ls\n",
-    "os.chdir(DATA_PATH)\n",
-    "!pwd && ls\n",
-    "\n",
-    "!python download_dataset.py\n",
-    "\n",
-    "!pwd && ls\n",
-    "os.chdir(\"..\")\n",
-    "!pwd && ls\n",
-    "\n",
-    "DATASET_PATH = DATA_PATH + \"Dataset/\"\n",
-    "print(\"\\n\" + \"Dataset is now located at: \" + DATASET_PATH)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b009e88c",
-   "metadata": {},
-   "source": [
-    "## Prepare Dataset"
+    "epochs = 30\n",
+    "batch_size = 16\n",
+    "n_hidden = 32"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "336a2fcf",
+   "id": "a2210e64",
    "metadata": {},
    "outputs": [],
    "source": [
-    "TRAIN = \"train/\"\n",
-    "TEST = \"test/\"\n",
+    "def _count_classes(y):\n",
+    "    return len(set([tuple(category) for category in y]))\n",
     "\n",
+    "X_train, X_test, Y_train, Y_test = load_data()\n",
+    "# train-test data split\n",
+    "# X는 input, Y는 (정답)output\n",
     "\n",
-    "# Load \"X\" (the neural network's training and testing inputs)\n",
+    "timesteps = len(X_train[0])\n",
+    "input_dim = len(X_train[0][0])\n",
     "\n",
-    "def load_X(X_signals_paths):\n",
-    "    X_signals = []\n",
-    "    \n",
-    "    for signal_type_path in X_signals_paths:\n",
-    "        file = open(signal_type_path, 'r')\n",
-    "        # Read dataset from disk, dealing with text files' syntax\n",
-    "        X_signals.append(\n",
-    "            [np.array(serie, dtype=np.float32) for serie in [\n",
-    "                row.replace('  ', ' ').strip().split(' ') for row in file\n",
-    "            ]]\n",
-    "        )\n",
-    "        file.close()\n",
-    "    \n",
-    "    return np.transpose(np.array(X_signals), (1, 2, 0))\n",
+    "# 분류하고 싶은 클래스 개수\n",
+    "n_classes = _count_classes(Y_train) \n",
     "\n",
-    "X_train_signals_paths = [\n",
-    "    DATASET_PATH + TRAIN + \"Inertial Signals/\" + signal + \"train.txt\" for signal in INPUT_SIGNAL_TYPES\n",
-    "]\n",
-    "X_test_signals_paths = [\n",
-    "    DATASET_PATH + TEST + \"Inertial Signals/\" + signal + \"test.txt\" for signal in INPUT_SIGNAL_TYPES\n",
-    "]\n",
+    "model = Sequential()\n",
     "\n",
-    "X_train = load_X(X_train_signals_paths)\n",
-    "X_test = load_X(X_test_signals_paths)\n",
+    "# n_hidden : 은닉계층 임베딩 되는 차원\n",
+    "# LSTM cell =  n_hidden 차원으로 만드는 것\n",
+    "# timestep : split해서 넣을 데이터 절편 크기\n",
+    "model.add(LSTM(n_hidden, input_shape=(timesteps, input_dim)))\n",
+    "# input차원 - (timesteps, input_dim)\n",
     "\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(n_classes, activation='sigmoid'))\n",
     "\n",
-    "# Load \"y\" (the neural network's training and testing outputs)\n",
+    "# loss : predicted 결과와 real 결과의 차이\n",
+    "# optimizer : local optimum에 빠지지 않도록 넘어가게 해주는 장치\n",
+    "model.compile(loss='categorical_crossentropy',\n",
+    "              optimizer='rmsprop',\n",
+    "              metrics=['accuracy'])\n",
     "\n",
-    "def load_y(y_path):\n",
-    "    file = open(y_path, 'r')\n",
-    "    # Read dataset from disk, dealing with text file's syntax\n",
-    "    y_ = np.array(\n",
-    "        [elem for elem in [\n",
-    "            row.replace('  ', ' ').strip().split(' ') for row in file\n",
-    "        ]], \n",
-    "        dtype=np.int32\n",
-    "    )\n",
-    "    file.close()\n",
-    "    \n",
-    "    # Substract 1 to each output class for friendly 0-based indexing \n",
-    "    return y_ - 1\n",
+    "model.fit(X_train,\n",
+    "          Y_train,\n",
+    "          batch_size=batch_size,\n",
+    "          validation_data=(X_test, Y_test),\n",
+    "          epochs=epochs)\n",
     "\n",
-    "y_train_path = DATASET_PATH + TRAIN + \"y_train.txt\"\n",
-    "y_test_path = DATASET_PATH + TEST + \"y_test.txt\"\n",
-    "\n",
-    "y_train = load_y(y_train_path)\n",
-    "y_test = load_y(y_test_path)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e54ced75",
-   "metadata": {},
-   "source": [
-    "## LSTM neural network"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "feb2a015",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Graph input/output\n",
-    "x = tf.placeholder(tf.float32, [None, n_steps, n_input])\n",
-    "y = tf.placeholder(tf.float32, [None, n_classes])\n",
-    "\n",
-    "# Graph weights\n",
-    "weights = {\n",
-    "    'hidden': tf.Variable(tf.random_normal([n_input, n_hidden])), # Hidden layer weights\n",
-    "    'out': tf.Variable(tf.random_normal([n_hidden, n_classes], mean=1.0))\n",
-    "}\n",
-    "biases = {\n",
-    "    'hidden': tf.Variable(tf.random_normal([n_hidden])),\n",
-    "    'out': tf.Variable(tf.random_normal([n_classes]))\n",
-    "}\n",
-    "\n",
-    "pred = LSTM_RNN(x, weights, biases)\n",
-    "\n",
-    "# Loss, optimizer and evaluation\n",
-    "l2 = lambda_loss_amount * sum(\n",
-    "    tf.nn.l2_loss(tf_var) for tf_var in tf.trainable_variables()\n",
-    ") # L2 loss prevents this overkill neural network to overfit the data\n",
-    "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(labels=y, logits=pred)) + l2 # Softmax loss\n",
-    "optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate).minimize(cost) # Adam Optimizer\n",
-    "\n",
-    "correct_pred = tf.equal(tf.argmax(pred,1), tf.argmax(y,1))\n",
-    "accuracy = tf.reduce_mean(tf.cast(correct_pred, tf.float32))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6e83b38a",
-   "metadata": {},
-   "source": [
-    "## LSTM Training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3202cff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To keep track of training's performance\n",
-    "test_losses = []\n",
-    "test_accuracies = []\n",
-    "train_losses = []\n",
-    "train_accuracies = []\n",
-    "\n",
-    "# Launch the graph\n",
-    "sess = tf.InteractiveSession(config=tf.ConfigProto(log_device_placement=True))\n",
-    "init = tf.global_variables_initializer()\n",
-    "sess.run(init)\n",
-    "\n",
-    "# Perform Training steps with \"batch_size\" amount of example data at each loop\n",
-    "step = 1\n",
-    "while step * batch_size <= training_iters:\n",
-    "    batch_xs =         extract_batch_size(X_train, step, batch_size)\n",
-    "    batch_ys = one_hot(extract_batch_size(y_train, step, batch_size))\n",
-    "\n",
-    "    # Fit training using batch data\n",
-    "    _, loss, acc = sess.run(\n",
-    "        [optimizer, cost, accuracy],\n",
-    "        feed_dict={\n",
-    "            x: batch_xs, \n",
-    "            y: batch_ys\n",
-    "        }\n",
-    "    )\n",
-    "    train_losses.append(loss)\n",
-    "    train_accuracies.append(acc)\n",
-    "    \n",
-    "    # Evaluate network only at some steps for faster training: \n",
-    "    if (step*batch_size % display_iter == 0) or (step == 1) or (step * batch_size > training_iters):\n",
-    "        \n",
-    "        # To not spam console, show training accuracy/loss in this \"if\"\n",
-    "        print(\"Training iter #\" + str(step*batch_size) + \\\n",
-    "              \":   Batch Loss = \" + \"{:.6f}\".format(loss) + \\\n",
-    "              \", Accuracy = {}\".format(acc))\n",
-    "        \n",
-    "        # Evaluation on the test set (no learning made here - just evaluation for diagnosis)\n",
-    "        loss, acc = sess.run(\n",
-    "            [cost, accuracy], \n",
-    "            feed_dict={\n",
-    "                x: X_test,\n",
-    "                y: one_hot(y_test)\n",
-    "            }\n",
-    "        )\n",
-    "        test_losses.append(loss)\n",
-    "        test_accuracies.append(acc)\n",
-    "        print(\"PERFORMANCE ON TEST SET: \" + \\\n",
-    "              \"Batch Loss = {}\".format(loss) + \\\n",
-    "              \", Accuracy = {}\".format(acc))\n",
-    "\n",
-    "    step += 1\n",
-    "\n",
-    "print(\"Optimization Finished!\")\n",
-    "\n",
-    "# Accuracy for test data\n",
-    "\n",
-    "one_hot_predictions, accuracy, final_loss = sess.run(\n",
-    "    [pred, accuracy, cost],\n",
-    "    feed_dict={\n",
-    "        x: X_test,\n",
-    "        y: one_hot(y_test)\n",
-    "    }\n",
-    ")\n",
-    "\n",
-    "test_losses.append(final_loss)\n",
-    "test_accuracies.append(accuracy)\n",
-    "\n",
-    "print(\"FINAL RESULT: \" + \\\n",
-    "      \"Batch Loss = {}\".format(final_loss) + \\\n",
-    "      \", Accuracy = {}\".format(accuracy))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fb78ff64",
-   "metadata": {},
-   "source": [
-    "## Visual Graph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d273d5e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "\n",
-    "font = {\n",
-    "    'family' : 'Bitstream Vera Sans',\n",
-    "    'weight' : 'bold',\n",
-    "    'size'   : 18\n",
-    "}\n",
-    "matplotlib.rc('font', **font)\n",
-    "\n",
-    "width = 12\n",
-    "height = 12\n",
-    "plt.figure(figsize=(width, height))\n",
-    "\n",
-    "indep_train_axis = np.array(range(batch_size, (len(train_losses)+1)*batch_size, batch_size))\n",
-    "plt.plot(indep_train_axis, np.array(train_losses),     \"b--\", label=\"Train losses\")\n",
-    "plt.plot(indep_train_axis, np.array(train_accuracies), \"g--\", label=\"Train accuracies\")\n",
-    "\n",
-    "indep_test_axis = np.append(\n",
-    "    np.array(range(batch_size, len(test_losses)*display_iter, display_iter)[:-1]),\n",
-    "    [training_iters]\n",
-    ")\n",
-    "plt.plot(indep_test_axis, np.array(test_losses),     \"b-\", label=\"Test losses\")\n",
-    "plt.plot(indep_test_axis, np.array(test_accuracies), \"g-\", label=\"Test accuracies\")\n",
-    "\n",
-    "plt.title(\"Training session's progress over iterations\")\n",
-    "plt.legend(loc='upper right', shadow=True)\n",
-    "plt.ylabel('Training Progress (Loss or Accuracy values)')\n",
-    "plt.xlabel('Training iteration')\n",
-    "\n",
-    "plt.show()"
+    "# Evaluate\n",
+    "print(confusion_matrix(Y_test, model.predict(X_test)))"
    ]
   }
  ],
